# projectAnime

./: .gitignore  CMakeLists.txt  CustomDatasetTorch.cpp  CustomDatasetTorch.hpp  main.cpp
